kubernetes/charts/templates/mosquitto.yaml
#/*********************************************************************
# Copyright (c) Intel Corporation 2020
# SPDX-License-Identifier: Apache-2.0
#**********************************************************************/
apiVersion: v1
kind: Service
metadata:
  labels:
    app: mosquitto
  name: mosquitto
spec:
  ports:
  - port: 9001
    name: websocket
    protocol: TCP
    targetPort: 9001
  - port: 8883
    name: mqtt
    protocol: TCP
    targetPort: 8883
  - port: 1883
    name: mqtt2
    protocol: TCP
    targetPort: 1883
  selector:
    app: mosquitto
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      volumes:
      - name: mosquitto-conf
        configMap:
          name: mosquitto-config-file
          items:
          - key: mosquitto.conf
            path: mosquitto.conf
      containers:
        - name: mosquitto
          image: eclipse-mosquitto
          volumeMounts:
          - name: mosquitto-conf
            mountPath: /mosquitto/config/mosquitto.conf
            subPath: mosquitto.conf
          ports:
            - containerPort: 9001
              name: websocket
            - containerPort: 8883
              name: mqtt
            - containerPort: 1883
              name: mqtt2
